# whisper_windows

./: .gitignore  BUILD_DEMO.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  BUILD_TRIGGER.txt  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  GITHUB_SETUP.md  IMMEDIATE_BUILD_SOLUTION.md  INSTALL.md  LICENSE  NOTICE  README.md  RELEASE_BUILD_GUIDE.md  RELEASE_FIX_INSTRUCTIONS.md  TESTING.md  USER_GUIDE.md  WASAPI_IMPLEMENTATION.md  WORKFLOW_FAILURE_ANALYSIS.md  auto-complete.bat  create-source-release.bat  immediate-build.bat  quick-package.bat  quick-upload.bat  simple-demo-release.bat  test_audio_capture.cpp  trigger-build.txt  windows_integration_review.txt
.github/: RELEASE_CHECKLIST.md  RELEASE_TEMPLATE.md
.github/workflows/: build.yml  manual-trigger.yml  release-fixed.yml  release.yml
WhisperApp-v1.0.0-demo/: BUILD_STATUS.txt
WhisperApp-v1.0.0-source/: BUILD.bat  CMakeLists.txt  LICENSE.txt  USER_GUIDE.md  error_handling_review.txt  qss_theming_review.txt  test_logic_review_summary.txt  testing_and_validation_plan.md  transcription_widget_context_menu_review.txt  ui_workflow_review.txt
WhisperApp-v1.0.0-source/config/: export-templates.json  update-manifest-template.json
WhisperApp-v1.0.0-source/resources/: WhisperApp.manifest
WhisperApp-v1.0.0-source/resources/styles/: dark.qss  default.qss  light.qss
WhisperApp-v1.0.0-source/scripts/: download-models.bat  quick-build.bat  setup-dev-env.bat  trigger-release-workflow.bat
WhisperApp-v1.0.0-source/src/: main.cpp
WhisperApp-v1.0.0-source/src/core/: AppInfo.h  AudioCapture.cpp  AudioCapture.h  AudioUtils.cpp  AudioUtils.h  DeviceManager.cpp  ErrorHandler.h  Localization.cpp  Localization.h  ModelManager.cpp  Settings.h  UpdateChecker.cpp  UpdateChecker.h  WhisperEngine.cpp  WhisperEngine.h  WhisperStub.h
WhisperApp-v1.0.0-source/src/system/: ClipboardManager.cpp  ClipboardManager.h  GlobalHotkeys.cpp  GlobalHotkeys.h  WindowManager.cpp  WindowManager.h
WhisperApp-v1.0.0-source/src/ui/: HotkeyEditWidget.h  MainWindow.cpp  MainWindow.h  ModelDownloader.cpp  SettingsDialog.cpp  SettingsDialog.h  StatusBarWidget.cpp  TranscriptionHistoryWidget.cpp  TranscriptionHistoryWidget.h  TranscriptionWidget.cpp  TrayIcon.cpp  UIUtils.cpp  UIUtils.h
WhisperApp-v1.0.0-source/tests/auto/: CMakeLists.txt  main_auto_tests.cpp  test_mainwindow_logic.cpp  test_mainwindow_logic.h  test_settings.cpp  test_settings.h
build_auto_tests/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
build_auto_tests/.qt/: QtDeploySupport.cmake
build_auto_tests/WhisperApp_autogen/: deps  mocs_compilation.cpp
build_auto_tests/WhisperApp_autogen/IMGALCVROS/: moc_ClipboardManager.cpp.d  moc_GlobalHotkeys.cpp.d  moc_WindowManager.cpp.d
build_auto_tests/WhisperApp_autogen/PRMOGMWJPH/: moc_Localization.cpp.d  moc_UpdateChecker.cpp.d
build_auto_tests/WhisperApp_autogen/YPKJ5OE7LN/: moc_AboutDialog.cpp.d  moc_AudioLevelWidget.cpp.d  moc_HotkeyEditWidget.cpp.d  moc_MainWindow.cpp.d  moc_ModelDownloader.cpp.d  moc_SettingsDialog.cpp.d  moc_StatusBarWidget.cpp.d  moc_TranscriptionHistoryWidget.cpp.d  moc_TranscriptionWidget.cpp.d  moc_TrayIcon.cpp.d
build_auto_tests/tests/auto/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
config/: default-config.json  hotkey-presets.json
docs/: download-page-template.html
installer/: installer.nsi
resources/: resources.qrc
resources/styles/: dark.qss
scripts/: collect-dependencies.bat  create-placeholders.bat  generate-checksums.bat  generate-icons.bat  generate-icons.py  init-git-repo.bat  prepare-release.bat  test-build.bat  test-installer.bat  trigger-release-workflow.bat
src/: main.cpp
src/core/: AudioCapture.cpp  AudioConverter.cpp  AudioConverter.h  DeviceManager.h  ErrorCodes.h  Localization.cpp  Logger.cpp  Logger.h  ModelManager.cpp  ModelManager.h  Settings.cpp  Settings.h  UpdateChecker.cpp  WhisperEngine.cpp
src/system/: ClipboardManager.cpp  ClipboardManager.h  GlobalHotkeys.cpp  GlobalHotkeys.h  WindowManager.cpp  WindowManager.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AudioLevelWidget.cpp  AudioLevelWidget.h  HotkeyEditWidget.cpp  MainWindow.cpp  MainWindow.h  ModelDownloader.cpp  ModelDownloader.h  StatusBarWidget.h  TranscriptionHistoryWidget.h  TranscriptionWidget.h  TrayIcon.h  UIUtils.cpp
tests/: CMakeLists.txt  TestUtils.h
tests/core/: AudioCaptureTest.cpp  AudioConverterTest.cpp  AudioUtilsTest.cpp  DeviceManagerTest.cpp  ErrorCodesTest.cpp  ModelManagerTest.cpp  SettingsTest.cpp  WhisperEngineTest.cpp
tests/data/: .gitkeep
tests/integration/: RecordingIntegrationTest.cpp  TranscriptionIntegrationTest.cpp
tests/mocks/: MockAudioCapture.h  MockWhisperEngine.h
tests/scripts/: generate-test-data.bat  run-tests.bat
tests/system/: ClipboardManagerTest.cpp  GlobalHotkeysTest.cpp  WindowManagerTest.cpp
translations/: whisperapp_es_ES.ts
